# wzxcasdsacvvqwfddv

./: CMakeLists.txt  compile.sh  main.cu  readme.md
data/: benchmark_TurboFFT_A100_fp32.csv  benchmark_TurboFFT_err_A100_fp32.csv  benchmark_TurboFFT_ft_A100_fp32.csv  benchmark_cuFFT_A100_fp32.csv  benchmark_cuFFT_A100_fp64.csv  benchmark_xin_A100_fp32.csv  benchmark_xin_A100_fp32_1.csv  benchmark_xin_A100_fp64.csv
data_ft/: ft_scheme_thread_bs=1_A100_fp32.csv  ft_scheme_thread_bs=1_A100_fp64.csv  ft_scheme_threadblock_bs=16_A100_fp32.csv  ft_scheme_threadblock_bs=16_A100_fp64.csv  ft_scheme_threadblock_bs=1_A100_fp32.csv  ft_scheme_threadblock_bs=1_A100_fp64.csv  ft_scheme_threadblock_bs=2_A100_fp32.csv  ft_scheme_threadblock_bs=2_A100_fp64.csv  ft_scheme_threadblock_bs=32_A100_fp32.csv  ft_scheme_threadblock_bs=32_A100_fp64.csv  ft_scheme_threadblock_bs=4_A100_fp32.csv  ft_scheme_threadblock_bs=4_A100_fp64.csv  ft_scheme_threadblock_bs=8_A100_fp32.csv  ft_scheme_threadblock_bs=8_A100_fp64.csv
include/: TurboFFT.h  TurboFFT_double2.h  TurboFFT_float2.h  TurboFFT_radix_2_template.h
include/code_gen/scripts/: fft_codegen.py  main_codegen.py
include/cufft/: cufft.h  cufft_ft.h  reduction.cuh
include/param/A100/: param_double2.csv  param_float2.csv
include/param/T4/: param_double2.csv  param_float2.csv
include/turbofft/: constants.h  macro_ops.h  tensor.h
include/turbofft/fft/device/: default_fft.h
include/turbofft/fft/kernel/: default_fft.h  (+1 more)
include/utils/: CommandLineParser.h  abft.h  compareData.h  initializeData.h  printData.h  readCSV.h  utils.h
(+2 files in other folders)
